--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   position: relative;
   margin-top: 3px;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   z-index: 2;
   justify-content: space-between;
 }
@@ -18,7 +18,7 @@
 .mainContent {
   margin-top: 1%;
   width: 80%;
-  background-color: #e3e5fc;
+  background-color: #ffffff;
   z-index: 2;
   float: right;
 }
