--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,7 +1,64 @@
+a{
+    text-decoration: none;
+}
+
 .header {
+    position: relative;
     width: 100%;
     height: 60px;
-    background-color: #FBFAFB;
+    background-color: #FFDE80;
     outline: -5px;
     z-index: 2;
+    border-radius: 2px;
+    box-shadow: 0 0 10px rgb(153, 153, 153);
+}
+
+.loginInfo{
+    position: relative;
+    float: right;
+    height: 100%;
+}
+
+.loginButton{
+    position: relative;
+    margin-top: 50%;
+    margin-right: 10px;
+    transform: translate(0, -85%);
+    font-size: 150%;
+    border-radius: 3px;
+    color: rgb(255, 255, 255);
+    background-color: #000000;
+}
+
+.logoutButton{
+    top: 4px;
+    cursor: pointer;
+    position: relative;
+    margin-top: 5.5%;
+    margin-right: 15px;
+    transform: translate(0, 0);
+    color: rgb(255, 255, 255);
+    font-size: 150%;
+    border: none;
+    border-radius: 3px;
+    background-color: #000000;
+}
+
+/* .loginItem{
+    position: relative;
+    margin-top: 5.5%;
+    margin-right: 15px;
+    transform: translate(0, 0);
+    color: black;
+    font-size: 150%;
+    border: #000000 solid 1px;
+} */
+
+svg{
+    top: 8px;
+    position: relative;
+    cursor: pointer;
+    fill:#000000;
+    margin-right: 30px;
+    margin-top: 10px;
 }
