--- a/src/components/Messages/UsersList/user.module.css
+++ b/src/components/Messages/UsersList/user.module.css
@@ -4,19 +4,25 @@
   border-bottom: 1px solid rgb(180, 180, 180);
   font-weight: 500;
 }
+
+.dialogsItem img{
+  width: 50px;
+  height: 50px;
+  float: left;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
 .item{
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(238, 0, 0, 0.6);
   text-decoration: none;
 }
 
-.dialogsItem a:hover {
+/* .dialogsItem a:hover {
   color: rgba(0, 0, 0, 1);
 }
 
 .dialogsItem a {
   text-decoration: none;
-}
-
-a.active {
-  color: rgba(0, 0, 0, 1);
-}
+  color: rgba(0, 0, 0, 0.6);
+} */
